src/test/resources/parser/valid/subtractionNum.sbsc
// Test subtraction

println(str(1.0 - 2.0));