src/test/resources/parser/invalid/cast/badStringCast.sbsc
// parser should error at invalid cast.

println(str("test"));

return false;